<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="last_view" type="id"/>
</resources>